Add easy Colab setup - One-click launch like Fooocus

--- a/IC_Light_Professional_Colab.ipynb
+++ b/IC_Light_Professional_Colab.ipynb
@@ -5,9 +5,12 @@
    "id": "de59d53e",
    "metadata": {},
    "source": [
-    "# 🌟 IC Light Professional - Advanced Image Relighting\n",
-    "\n",
-    "**State-of-the-art AI image relighting with consistent lighting**\n",
+    "\"source\": [\n",
+    "   \"# 🌟 IC Light Professional - Advanced Image Relighting\\n\",\n",
+    "   \"\\n\",\n",
+    "   \"[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/salmanabjam/ic-light-professional/blob/main/IC_Light_Professional_Colab.ipynb)\\n\",\n",
+    "   \"\\n\",\n",
+    "   \"**State-of-the-art AI image relighting with consistent lighting**\\n\"\n",
     "\n",
     "✨ **Features:**\n",
     "- Professional Stable Diffusion 1.5 based relighting\n",
@@ -17,7 +20,7 @@
     "- Multiple model variants (FC, FBC, FCON)\n",
     "- Real-time processing with GPU acceleration\n",
     "\n",
-    "📚 **Repository:** [IC Light Google Colab](https://github.com/your-repo/ic-light-colab)\n",
+    "📚 **Repository:** [IC Light Professional](https://github.com/salmanabjam/ic-light-professional)\n",
     "\n",
     "---"
    ]
