Add missing setup files - optimized_setup.py and easy_launch.py

--- a/IC_Light_Complete_Google_Colab.ipynb
+++ b/IC_Light_Complete_Google_Colab.ipynb
@@ -5,16 +5,21 @@
    "id": "4da5f1ba",
    "metadata": {},
    "source": [
-    "# IC Light - Complete Implementation in Google Colab\n",
-    "## Imposing Consistent Light for Image Relighting\n",
+    "# 🚀 IC Light Professional - Complete Google Colab Implementation\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lllyasviel/IC-Light)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/salmanabjam/ic-light-professional/blob/main/IC_Light_Complete_Google_Colab.ipynb)\n",
     "\n",
-    "This notebook provides a complete implementation of IC Light for image relighting with both text-conditioned and background-conditioned models.\n",
+    "**Professional AI Image Relighting with Memory Optimization for Google Colab**\n",
     "\n",
-    "### Features:\n",
-    "- Text-conditioned relighting\n",
-    "- Background-conditioned relighting \n",
+    "## ✨ Features:\n",
+    "- 🎯 One-click setup (like Fooocus entry_with_update.py --share)\n",
+    "- 🧠 Intelligent memory management for Colab (Free/Pro)\n",
+    "- 🌐 Professional English interface\n",
+    "- ⚡ GPU optimization (T4/V100/A100 support)\n",
+    "- 🔗 Public share link generation\n",
+    "- 📊 Real-time resource monitoring\n",
+    "- 🎨 Text-conditioned and background-conditioned relighting\n",
+    "- 🖼️ Automatic background removal integration \n",
     "- Multiple lighting directions (Left, Right, Top, Bottom)\n",
     "- High-resolution support\n",
     "- Real-time processing\n",
