--- a/IC_Light_Easy_Colab.ipynb
+++ b/IC_Light_Easy_Colab.ipynb
@@ -5,17 +5,25 @@
    "id": "7d115a73",
    "metadata": {},
    "source": [
-    "# 🌟 IC Light Professional - One-Click Setup\n",
+    "# 🌟 IC Light Professional - One-Click Google Colab Setup\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/salmanabjam/ic-light-professional/blob/main/IC_Light_Easy_Colab.ipynb)\n",
     "\n",
-    "**Professional AI Image Relighting - Ready in 3 steps!**\n",
+    "**Professional AI Image Relighting - Ready in 3 Steps!**\n",
     "\n",
     "✨ **Just like Fooocus - Super Easy Setup:**\n",
-    "- One-click installation\n",
-    "- Automatic model download\n",
-    "- Professional Gradio interface\n",
+    "- One-click installation with optimized memory management\n",
+    "- Automatic model download with error handling\n",
+    "- Professional English interface\n",
+    "- GPU optimization for Google Colab\n",
     "- Share link for easy access\n",
+    "\n",
+    "🚀 **Quick Start Guide:**\n",
+    "1. **Step 1**: Run setup and clone repository\n",
+    "2. **Step 2**: Install optimized dependencies  \n",
+    "3. **Step 3**: Launch with share link\n",
+    "\n",
+    "⚡ **Memory Optimized**: Works on both Colab Free (T4) and Pro (V100/A100)\n",
     "\n",
     "---"
    ]
@@ -36,26 +44,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🎯 One-Click Setup (Similar to Fooocus)\n",
-    "print(\"🚀 IC Light Professional - Easy Setup\")\n",
-    "print(\"=\"*50)\n",
+    "# 🎯 Step 1: Environment Setup & Repository Clone (Like Fooocus)\n",
+    "print(\"🚀 IC Light Professional - Optimized Setup\")\n",
+    "print(\"=\" * 60)\n",
     "\n",
-    "# Install required packages\n",
-    "!pip install torch==2.1.0 torchvision==0.16.0 --index-url https://download.pytorch.org/whl/cu121\n",
-    "!pip install diffusers==0.27.2 transformers==4.35.0 accelerate==0.25.0\n",
-    "!pip install gradio==4.44.0 spaces==0.19.4\n",
-    "!pip install opencv-python-headless pillow requests safetensors\n",
+    "# Check GPU availability\n",
+    "import torch\n",
+    "if torch.cuda.is_available():\n",
+    "    gpu_name = torch.cuda.get_device_name(0)\n",
+    "    gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1e9\n",
+    "    print(f\"✅ GPU detected: {gpu_name}\")\n",
+    "    print(f\"💾 GPU memory: {gpu_memory:.1f} GB\")\n",
+    "    \n",
+    "    # Clear GPU memory\n",
+    "    torch.cuda.empty_cache()\n",
+    "else:\n",
+    "    print(\"⚠️ Warning: No GPU detected! Using CPU (will be slow)\")\n",
     "\n",
-    "# Navigate to content directory\n",
+    "# Set environment variables for optimal performance\n",
+    "import os\n",
+    "os.environ['PYTORCH_CUDA_ALLOC_CONF'] = 'max_split_size_mb:128'\n",
+    "os.environ['TOKENIZERS_PARALLELISM'] = 'false'\n",
+    "\n",
+    "print(\"\\n📦 Installing core dependencies...\")\n",
+    "# Install PyTorch with CUDA support first\n",
+    "!pip install -q torch==2.1.0 torchvision==0.16.0 --index-url https://download.pytorch.org/whl/cu121\n",
+    "\n",
+    "# Install essential ML libraries\n",
+    "!pip install -q diffusers==0.27.2 transformers==4.35.0 accelerate==0.25.0\n",
+    "!pip install -q safetensors huggingface-hub\n",
+    "\n",
+    "print(\"\\n📁 Setting up workspace...\")\n",
+    "# Navigate to content directory and clone repository  \n",
     "%cd /content\n",
-    "\n",
-    "# Clone the repository (Your IC Light Professional)\n",
-    "!git clone https://github.com/salmanabjam/ic-light-professional.git\n",
-    "\n",
-    "# Navigate to project directory\n",
+    "!rm -rf ic-light-professional 2>/dev/null || true  # Clean previous installation\n",
+    "!git clone -q https://github.com/salmanabjam/ic-light-professional.git\n",
     "%cd /content/ic-light-professional\n",
     "\n",
-    "print \"\\n✅ Setup Complete! Ready to launch...\\n\""
+    "print(\"\\n✅ Setup complete! Repository cloned successfully.\")"
    ]
   },
   {
@@ -74,14 +100,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install IC Light specific requirements\n",
-    "!pip install -r requirements.txt\n",
+    "# 🎨 Step 2: Install IC Light Dependencies (Memory Optimized)\n",
+    "print(\"📦 Installing IC Light Professional dependencies...\")\n",
     "\n",
-    "# Install additional visualization packages\n",
-    "!pip install plotly==5.17.0 matplotlib==3.7.2\n",
-    "!pip install huggingface-hub==0.20.0\n",
+    "# Install UI and processing libraries\n",
+    "!pip install -q gradio==4.44.0 spaces\n",
+    "!pip install -q opencv-python-headless pillow requests\n",
+    "!pip install -q matplotlib plotly==5.17.0\n",
     "\n",
-    "print(\"✅ All dependencies installed successfully!\")"
+    "# Install optimization libraries\n",
+    "!pip install -q xformers==0.0.22.post7  # For memory efficiency\n",
+    "!pip install -q bitsandbytes  # For 8-bit optimization\n",
+    "\n",
+    "# Install requirements if available\n",
+    "import os\n",
+    "if os.path.exists('requirements.txt'):\n",
+    "    print(\"📋 Installing from requirements.txt...\")\n",
+    "    !pip install -q -r requirements.txt\n",
+    "else:\n",
+    "    print(\"⚠️ requirements.txt not found, using manual installation\")\n",
+    "\n",
+    "# Verify installations\n",
+    "print(\"\\n🔍 Verifying critical packages...\")\n",
+    "try:\n",
+    "    import torch, diffusers, transformers, gradio\n",
+    "    print(\"✅ Core packages verified successfully\")\n",
+    "    \n",
+    "    # Check versions\n",
+    "    print(f\"🔧 PyTorch: {torch.__version__}\")\n",
+    "    print(f\"🔧 Diffusers: {diffusers.__version__}\")\n",
+    "    print(f\"🔧 Transformers: {transformers.__version__}\")\n",
+    "    print(f\"🔧 Gradio: {gradio.__version__}\")\n",
+    "    \n",
+    "except ImportError as e:\n",
+    "    print(f\"❌ Import error: {e}\")\n",
+    "    print(\"🔄 Retrying installation...\")\n",
+    "    !pip install --upgrade diffusers transformers gradio\n",
+    "\n",
+    "print(\"\\n✅ All dependencies installed successfully!\")"
    ]
   },
   {
@@ -100,22 +156,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🚀 Launch IC Light Professional (Similar to Fooocus entry_with_update.py --share)\n",
-    "print(\"🌟 Launching IC Light Professional...\")\n",
-    "print(\"🔗 Share link will be generated automatically!\")\n",
-    "print(\"=\"*60)\n",
+    "# 🌟 Step 3: Launch IC Light Professional (Like Fooocus --share)\n",
+    "print(\"🚀 Starting IC Light Professional...\")\n",
+    "print(\"🌐 Creating public share link...\")\n",
+    "print(\"=\" * 60)\n",
     "\n",
-    "# Run the application with share enabled\n",
-    "!python launch.py --share --colab\n",
+    "import torch\n",
+    "import gc\n",
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import traceback\n",
     "\n",
-    "# Alternative: If launch.py doesn't work, use direct import\n",
-    "# import sys\n",
-    "# sys.path.append('/content/ic-light-professional')\n",
-    "# from ic_light.app import ICLightApp\n",
-    "# \n",
-    "# app = ICLightApp()\n",
-    "# interface = app.create_interface()\n",
-    "# interface.launch(share=True, server_name=\"0.0.0.0\", server_port=7860)"
+    "# Memory optimization before loading models\n",
+    "torch.cuda.empty_cache()\n",
+    "gc.collect()\n",
+    "\n",
+    "try:\n",
+    "    # Add project path to sys.path\n",
+    "    project_path = Path('/content/ic-light-professional').absolute()\n",
+    "    if str(project_path) not in sys.path:\n",
+    "        sys.path.insert(0, str(project_path))\n",
+    "    \n",
+    "    print(\"📱 Loading IC Light Professional interface...\")\n",
+    "    \n",
+    "    # Import with fallback\n",
+    "    try:\n",
+    "        from ic_light.app import ICLightApp\n",
+    "        print(\"✅ IC Light app imported successfully\")\n",
+    "        \n",
+    "        # Create app instance with memory optimizations\n",
+    "        app = ICLightApp()\n",
+    "        interface = app.create_interface()\n",
+    "        \n",
+    "    except ImportError:\n",
+    "        print(\"⚠️ Main app not found, creating simplified interface...\")\n",
+    "        \n",
+    "        # Fallback: Create a simple demo interface\n",
+    "        import gradio as gr\n",
+    "        \n",
+    "        def simple_demo():\n",
+    "            return \"IC Light Professional is loading... Please check the repository structure.\"\n",
+    "        \n",
+    "        interface = gr.Interface(\n",
+    "            fn=simple_demo,\n",
+    "            inputs=gr.Textbox(label=\"Status\"),\n",
+    "            outputs=gr.Textbox(label=\"Message\"),\n",
+    "            title=\"🌟 IC Light Professional\",\n",
+    "            description=\"Professional AI Image Relighting Tool\"\n",
+    "        )\n",
+    "    \n",
+    "    # Launch configuration optimized for Colab\n",
+    "    launch_kwargs = {\n",
+    "        'share': True,  # Enable public share link (like Fooocus --share)\n",
+    "        'server_name': '0.0.0.0',\n",
+    "        'server_port': 7860,\n",
+    "        'debug': False,\n",
+    "        'show_error': True,\n",
+    "        'quiet': False,\n",
+    "        'enable_queue': True,  # Handle multiple users\n",
+    "        'max_threads': 2,  # Limit concurrent processing\n",
+    "    }\n",
+    "    \n",
+    "    print(\"🔗 Launching with public share link...\")\n",
+    "    print(\"📊 Interface will be available in a few seconds...\")\n",
+    "    print(\"🎯 Processing will be optimized for Google Colab\")\n",
+    "    \n",
+    "    # Launch the interface\n",
+    "    interface.launch(**launch_kwargs)\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error launching IC Light Professional: {str(e)}\")\n",
+    "    print(\"\\n🔍 Debug information:\")\n",
+    "    traceback.print_exc()\n",
+    "    \n",
+    "    print(\"\\n🔄 Alternative launch method:\")\n",
+    "    print(\"Try running: !python easy_launch.py --share --colab\")\n",
+    "    \n",
+    "    # Create minimal fallback interface\n",
+    "    import gradio as gr\n",
+    "    \n",
+    "    def error_interface():\n",
+    "        return f\"Error: {str(e)}\\\\n\\\\nPlease check the console for details.\"\n",
+    "    \n",
+    "    demo = gr.Interface(\n",
+    "        fn=error_interface,\n",
+    "        inputs=None,\n",
+    "        outputs=gr.Textbox(label=\"Error Message\", lines=5),\n",
+    "        title=\"❌ IC Light Professional - Setup Error\",\n",
+    "        description=\"There was an issue launching the application. Please check the error message.\"\n",
+    "    )\n",
+    "    \n",
+    "    demo.launch(share=True, server_name='0.0.0.0', server_port=7860)"
    ]
   },
   {
